# mini_malloc

./: CMakeLists.txt  README.md  mini_malloc.c  mini_malloc.h  mini_malloc_minimal.c
afl/: Makefile  fuzzer.cpp  mini_malloc.dict
afl/in/: testmalloc  testmalloc2
